# Creatore-preventivi-palchi

./: .gitignore  BRIEF_EASYEVENT_DESKTOP.md  README.md  index.html  package-lock.json  package.json  package.json.sig  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backup_pre_settings/: App.tsx  database.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: DebugConsole.tsx  DeliveryNote.tsx  ProductionSheet.tsx  QuoteEditor.tsx  QuotePreview.tsx  SettingsPanel.tsx  Warehouse.tsx
src/services/: database.ts  debug.ts  geocoding.ts  printHelper.ts
